--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="Main">
+      <img src="images/phones.png" alt="instagram's phone interface">
+      <div id="left-side">
+        <div id="titulo">
+          <img src="images/brand.png" alt="Instagram Logo">
+          <div id="login">
+            <img src="images/home.png" alt="Home button">
+            <p>
+              Log in
+            </p>
+          </div>
+        </div>
+        <div id="text">
+          <h2>Capture and Share<br>
+            the World's Moments</h2> 
+          <p>
+            Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          </p> 
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div>
+          <img src="images/badge-iphone.png" alt="gt instagram on App Store" class="image">
+          <img src="images/badge-android.png" alt="get instagram on Google Play" class="image">
+        </div>
+      </div>
+    </section>
+    <footer>
+      <ul>
+        <li>About</li>
+        <li>Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="c-insta">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
