--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <!-- HEADER (DISPLAY FLEX) AND BACKGROUND IMAGE REPEATED TO CREATE THE BACKGROUND COLOR-->
+    <section class="mainFlexItem">
+      <div class="iphonePic">
+        <img src="./images/phones.png" alt="Iphone picture">
+      </div>
+
+      <section> 
+        <div class="logInInstagram">       
+         <img src="./images/brand.png" alt="Instagram Logo">
+         <button type="button" class="logInButton">
+           <img src="./images/home.png" alt="Home button">
+           <p>Log in</p>
+         </button> 
+        </div>    
+
+                 <!-- MAIN BODY OF TEXT-->
+
+       <div class = "mainText">
+        <h1>Capture and Share <br/> the World's Moments</h1>    
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life <br/> with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look <br/> and feel, then post to Instagram &mdash; it's that easy. You can <br/> even share to Facebook, Twitter, Tumblr and more. It's a <br/> new way to see the world.</p> 
+        <p>Oh yeah, did we mention it's free?</p>     
+       </div>   
+
+       <div class="downloadLinks">
+         <img src="./images/badge-iphone.png" alt="Download on Iphone">
+         <img src="./images/badge-android.png" alt="Download on Android">
+       </div>
+      </section>
+    </section>
+
+
+    <!-- ADDITIONAL INFORMATION MENU-->
+    <section>
+      <ul class="informationMenu">
+        <li>about us</li>
+        <li>support</li>
+        <li>blog</li>
+        <li>press</li>
+        <li>api</li>
+        <li>jobs</li>
+        <li>privacy</li>
+        <li>terms</li>
+        <li class="grey">&copy 2014 Instagram</li>
+      </ul>
+          
+    </section>
+
   </body>
 </html>
