--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
       <div class="phones">
         <img src="images/phones.png" alt="phones">
       </div>
+      <div id="column">
       <div class="instagram">
          <div class="insta-logo">
           <img src="images/brand.png" alt ="brand">
          </div>
          <div class="btn">
-          <img src="images/home.png">
+          <img class="home" src="images/home.png">
           <a class="btn-login" href="">Log in</a>
         </div>
       </div>
       <div id="text">
-        <h1>Capture and Share the World's Moments</h1>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+        <h1>Capture and Share <br>the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life <br> with friends and family.<br><br> Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram
+          &mdash; it's that easy. You can <br>even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br><br>
            Oh yeah, did we mention it's free?</p>
       </div>
       <div id="downloads">
@@ -34,6 +35,7 @@
         <div>
           <img src="images/badge-android.png" alt="android-download">
         </div>
+      </div>
       </div>
     </section> 
      <!-- section 2 -->  
