--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
     <div class="content">
       <!--HEADER (LOGO + LOGIN BUTTON-->
       <div class="header">
-        <img src="images/brand.png" />
-        <div class="button">
+        <img src="./images/brand.png">
+        <div class="login">
           <img src="./images/home.png" />
-          <button type="button">Log in</button>
+          <input type="submit" value="Log in" class="button"/>
         </div>
         <!--TEXTO-->
       </div>
       <div class="text">
         <h2>Capture and Share <br> the World's Moments</h2>
-        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life <br>with
           friends and family. </p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to
-          Instagram- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+        <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to
+          Instagram- it's that easy. You can  <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the
           world.</p>
         <p>Oh yeah, did we mention it's free?</p>
-
+            <!--STORE ICONS-->
+            <div class="store-icons">
+              <img src="./images/badge-iphone.png" />
+              <img src="./images/badge-android.png" />
+            </div>
       </div>
-      <!--STORE ICONS-->
-      <div class="store-icons">
-        <img src="./images/badge-iphone.png" />
-        <img src="./images/badge-android.png" />
-      </div>
+    
 
     </div>
 
