--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <li>JOBS</li>
       <li>PRIVACY</li>
       <li>TERM</li>
-      <li>@2014 Instagram</li>
+      <li class="exception">@2014 INSTAGRAM</li>
     </ul>
 
   </footer>
