--- a/index.html
+++ b/index.html
@@ -1,16 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <header>
+    <nav>
+
+      <img src="images/brand.png" alt="Instagram Logo" />
+
+      <ul>
+        <li>
+          <img src="images/home.png" alt="Home Logo" />
+          <a href="#"> Log In </a>
+        </li>
+      </ul>
+
+    </nav>
+
+  </header>
+
+  <section>
+    <div>
+      <img src="images/phones.png" alt="Phones photo">
+    </div>
+
+    <article>
+
+      <h1> Capture and Share the World's Moments </h1>
+
+      <p>
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </p>
+
+      <p>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+        world.
+      </p>
+
+      <p>
+        Oh yeah, did we mention it's free?
+      </p>
+
+      <ul>
+        <li>
+          <a href="#"><img src="images/badge-iphone.png" alt="App Store badge"></a>
+          <a href="#"><img src="images/badge-android.png" alt="Google play badge"></a>
+        </li>
+      </ul>
+
+    </article>
+
+  </section>
+
+  <footer>
+
+    <span>
+      <ul>
+        <li><a href="#"> About Us </a></li>
+        <li><a href="#"> Support </a></li>
+        <li><a href="#"> Blog </a></li>
+        <li><a href="#"> Press </a></li>
+        <li><a href="#"> API </a></li>
+        <li><a href="#"> Jobs </a></li>
+        <li><a href="#"> Privacy </a></li>
+        <li><a href="#"> Terms </a></li>
+      </ul>
+    </span>
+
+    <span>
+      <p>&copy; 2014 Instagram</p>
+    </span>
+
+  </footer>
+
+</body>
+
 </html>
