--- a/index.html
+++ b/index.html
@@ -7,10 +7,41 @@
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div>
+      <img src="./images/phones.png" alt="Celulares Iphone">
+    </div>
+    <section>
+      <div>
+        <img src="./images/brand.png" alt="Logo Instagram">
+        <div>
+          <a href="#">Log In</a>
+        </div>
+      </div>
+      <div>
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div>
+          <img src="./images/badge-iphone.png" alt="AppStore Logo">
+          <img src="./images/badge-android.png" alt="PlayStore Logo">
+        </div>
+      </div>
+    </section>
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>Privacy Terms &copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
