--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+</head>
+
+<body>
+    <main>
+        <div class="main-image">
+            <img src="./images/phones.png" alt="Imagen móviles instagram">
+        </div>
+
+        <div class="main-content">
+            <header>
+                <div class="app-logo">
+                    <div class="logo-img"><img src="./images/brand.png" alt="App logo"></div>
+                </div>
+
+                <div class="log-button">
+                    <a href="#">
+                        <img src="./images/home.png" alt="home-icon" class="login-logo">
+                        <p>Log in</p>
+                    </a>
+                </div>
+            </header>
+
+            <section>
+                <h1>Capture and Share<br>the World's Moments</h1>
+                <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
+
+                <div class="download-buttons">
+                    <a href="#" class="apple-download"><img src="./images/badge-iphone.png" alt="apple download button"></a>
+                    <a href="#" class="android-download"><img src="./images/badge-android.png" alt="android download button"></a>
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Api</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li>
+                    <p class="copyright">&copy; 2014 Instagram</p>
+                </li>
+            </ul>
+        </nav>
+    </footer>
+
+</body>
+
 </html>
