--- a/index.html
+++ b/index.html
@@ -10,51 +10,51 @@
 </head>
 
 <body>
-  <header>
-    <nav>
 
-      <img src="images/brand.png" alt="Instagram Logo" />
-
-      <ul>
-        <li>
-          <img src="images/home.png" alt="Home Logo" />
-          <a href="#"> Log In </a>
-        </li>
-      </ul>
-
-    </nav>
-
-  </header>
-
-  <section>
-    <div>
+  <section id="principal">
+    <div class="iphone-box">
       <img src="images/phones.png" alt="Phones photo">
     </div>
 
-    <article>
+    <article class="text-box">
+      <div class="login-box">
+        <img src="images/brand.png" alt="Instagram Logo" />
 
-      <h1> Capture and Share the World's Moments </h1>
+        <ul>
+          <li class="login-btn">
+            <img src="images/home.png" alt="Home Logo" />
+            <a href="#"> Log In </a>
+          </li>
+        </ul>
+      </div>
 
-      <p>
-        Instagram is a fast, beautiful and fun way to share your life with friends and family.
-      </p>
+      <div class="info-box container">
 
-      <p>
-        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
-        world.
-      </p>
+        <h1> Capture and Share <br> 
+          the World's Moments </h1>
 
-      <p>
-        Oh yeah, did we mention it's free?
-      </p>
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        </p>
 
-      <ul>
-        <li>
-          <a href="#"><img src="images/badge-iphone.png" alt="App Store badge"></a>
-          <a href="#"><img src="images/badge-android.png" alt="Google play badge"></a>
-        </li>
-      </ul>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+
+        <ul>
+          <li>
+            <a href="#"><img src="images/badge-iphone.png" alt="App Store badge"></a>
+            <a href="#"><img src="images/badge-android.png" alt="Google play badge"></a>
+          </li>
+        </ul>
+
+      </div>
 
     </article>
 
