--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+   <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+  <section class="nav-bar">
+      <nav>
+        <ul>
+          <li><img src="/images/brand.png" alt="Instagram-logo"class="logo"></li>
+          <li class="log-in-button container"><img src="/images/home.png" alt=""><a href="">Log in</a></li>
+        </ul>
+      </nav>
+    </section>
+   
+    <section class="smart-phone-img"> <img src="/images/phones.png" alt="Smartphones image"></section>
+    <section class="welcome">
+      <div class="container"><h1> Instagram Capture and Share the World's Moments</h1> 
+        <p> Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. 
+    It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free? </p> <img src="/images/badge-android.png" alt="Download on the App Store"> 
+    <img src="/images/badge-iphone.png" alt="Get it on Google Play">  
+      </div>
+  </section>
+   
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href=""> Support</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Press</a></li>
+        <li><a href="">API</a></li>
+        <li><a href="">Jobs</a></li>
+        <li><a href="">Privacy</a></li>
+        <li><a href="">Terms</a></li>
+        <li class="year"><a href="">&copy; 2014 Instagram</a></li>
+      </ul>
+    </nav>
+  </footer>
+</body>
 </html>
