--- a/index.html
+++ b/index.html
@@ -5,12 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div>
+        <img src="images/phones.png" alt="iphone" />
+      </div>
+
+      <div>
+        <nav class="logo">
+          <img src="images/brand.png" alt="logo" />
+          <a href="#"><img src="images/home.png" alt="" /> Log in</a>
+        </nav>
+
+        <section>
+          <h1>
+            <span>Capture and Share</span>
+            the World's Moments
+          </h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <figure>
+            <img src="images/badge-iphone.png" alt="apple download 'link'" />
+            <img src="images/badge-android.png" alt="android download 'link'" />
+          </figure>
+        </section>
+      </div>
+    </main>
+
+    <footer>
+      <ul>
+        <li><a href="#">about us</a></li>
+        <li><a href="#">support</a></li>
+        <li><a href="#">blog</a></li>
+        <li><a href="#">press</a></li>
+        <li><a href="#">api</a></li>
+        <li><a href="#">jobs</a></li>
+        <li><a href="#">privacy</a></li>
+        <li><a href="#">terms</a></li>
+        <li><a href="#">&copy; 2021 instagram </a></li>
+      </ul>
+    </footer>
   </body>
 </html>
