--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="login-box">
         <img src="images/brand.png" alt="Instagram Logo" />
 
-        <ul>
-          <li class="login-btn">
+        <ul class="login-btn">
+          <li>
             <img src="images/home.png" alt="Home Logo" />
             <a href="#"> Log In </a>
           </li>
