--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    <div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
+  <section>
+    <div class="left-container">
       <img src="./images/phones.png" alt="Celulares Iphone">
     </div>
-    <section>
-      <div>
+    <div class="right-container">
+      <div class="top-box">
         <img src="./images/brand.png" alt="Logo Instagram">
-        <div>
+        <div class="button-box">
+          <img src="./images/home.png" alt="icono home">
           <a href="#">Log In</a>
         </div>
       </div>
-      <div>
-        <h1>Capture and Share the World's Moments</h1>
-        <p>Instagram is a fast, beautiful and fun way to share your life with
+      <div class="bottom-box">
+        <h1>Capture and Share <br> the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>,<strong>beautiful</strong> and <strong>fun</strong> way to share your life with
           friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.</p>
         <p>Oh yeah, did we mention it's free?</p>
-        <div>
+        <div class="stores-box">
           <img src="./images/badge-iphone.png" alt="AppStore Logo">
           <img src="./images/badge-android.png" alt="PlayStore Logo">
         </div>
       </div>
-    </section>
-    <footer>
-      <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Press</a></li>
-        <li><a href="#">API</a></li>
-        <li><a href="#">Jobs</a></li>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-        <li>Privacy Terms &copy; 2014 Instagram</li>
-      </ul>
-    </footer>
-  </body>
+    </div>
+  </section>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
