--- a/index.html
+++ b/index.html
@@ -1,16 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles/style.css">
+
+  <title>Instagram Clone</title>
+
+</head>
+
+<body>
+
+
+<div class="bgtile"></div>
+
+  <div class="section0">
+
+    <section class="section1">
+
+      <img src="images/phones.png" alt="moviles">
+
+    </section>
+
+    <section class="section2">
+
+      <img class="instagramLogo" src="images/brand.png">
+
+      <a class="btn" href="#" alt="Log in"><img class="home" src="images/home.png">Log in</a>
+
+      <div class="section3">
+
+        <h1>Capture and share</h1> 
+        <h1 class="head2">the World's Moments</h1>
+
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and family.</p>
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.</p>
+
+        <p>Oh yeah, did we mention it's free? </p>
+
+        <a href="#" alt="Download on the App Store"><img class="iphone" src="images/badge-iphone.png"></a>
+        <a href="#" alt="Get it on Google Play"><img class="android" src="images/badge-android.png"></a>
+      </div>
+
+    </section>
+  
+  </div>
+
+</body>
+
+  <nav>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">Api</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </nav>
+
+
+</div>
+
 </html>
