--- a/index.html
+++ b/index.html
@@ -6,31 +6,34 @@
     <title>Instagram Clone</title>
    <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body>
-  <section class="nav-bar">
+  <body><header>
+  <div class="nav-bar">
       <nav>
         <ul>
           <li><img src="/images/brand.png" alt="Instagram-logo"class="logo"></li>
           <li class="log-in-button container"><img src="/images/home.png" alt=""><a href="">Log in</a></li>
         </ul>
       </nav>
-    </section>
-   
-    <section class="smart-phone-img"> <img src="/images/phones.png" alt="Smartphones image"></section>
-    <section class="welcome">
-      <div class="container"><h1> Instagram Capture and Share the World's Moments</h1> 
+  </div>
+  </header>
+    <div class="smart-phone-img"> <img src="/images/phones.png" alt="Smartphones image"></div>
+    <div class="welcome">
+      <div class="container"><h1>Capture and Share the World's Moments</h1> 
         <p> Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. 
     It's a new way to see the world.</p>
-    <p>Oh yeah, did we mention it's free? </p> <img src="/images/badge-android.png" alt="Download on the App Store"> 
-    <img src="/images/badge-iphone.png" alt="Get it on Google Play">  
+    <p>Oh yeah, did we mention it's free? </p> 
+    <div class="store-container"><img src="/images/badge-android.png" alt="Download on the App Store"> 
+    <img src="/images/badge-iphone.png" alt="Get it on Google Play">  </div>
       </div>
-  </section>
+    </div>
    
   <footer>
-    <nav>
-      <ul>
+    <div>
+    <nav >
+      <ul class="footer-links">
         <li><a href="">About Us</a></li>
         <li><a href=""> Support</a></li>
         <li><a href="">Blog</a></li>
@@ -42,6 +45,7 @@
         <li class="year"><a href="">&copy; 2014 Instagram</a></li>
       </ul>
     </nav>
+  </div>
   </footer>
 </body>
 </html>
