Jose Zhu [WDFTMAD0521]

--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <div class="firstBox">
+        <img src="file:///Users/josezhu/Desktop/IronhackWeb/lab-css-instagram-clone/images/phones.png" alt="">
+        <div>
+          <div class="secondBox">
+            <img src="file:///Users/josezhu/Desktop/IronhackWeb/lab-css-instagram-clone/images/brand.png" class="logoImg" alt="">
+              <a href="#">
+                <div class="buttonInst">
+                  <img src="file:///Users/josezhu/Desktop/IronhackWeb/lab-css-instagram-clone/images/home.png" alt="">
+                  Log in
+                </div>
+              </a>
+          </div>
+          <div class="thirdBox">
+            <div class="thirdBoxIn">
+              <h1>Capture and share <br>the World´s Moments</h1>
+              <p class="textInts">instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+              <p class="textInts">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it´s that easy. You can even share to Facebook, Twitter, Tumblr and more. It´s a new way to see the world. </p>
+              <p class="textInts">Oh yeah, did we mention it´s free?</p>
+            </div>
+          </div>
+          <div class="app_button">
+            <img src="file:///Users/josezhu/Desktop/IronhackWeb/lab-css-instagram-clone/images/badge-iphone.png" alt="">
+            <img src="file:///Users/josezhu/Desktop/IronhackWeb/lab-css-instagram-clone/images/badge-android.png" alt="">
+          </div>
+        </div>
+      </div>
+  </section>
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="#"></a>About us</li>
+        <li><a href="#"></a>support</li>
+        <li><a href="#"></a>blog</li>
+        <li><a href="#"></a>press</li>
+        <li><a href="#"></a>api</li>
+        <li><a href="#"></a>jobs</li>
+        <li><a href="#"></a>privacy</li>
+        <li><a href="#"></a>2014 Instagram</li>
+        <li></li>
+      </ul>
+    </nav>
+  </footer>
   </body>
 </html>
