--- a/index.html
+++ b/index.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" href="images/favicon.ico">
+</head>
+
+<body>
+  <div class="group">
+    <div class="first">
+      <img class="phone" src="images/phones.png" alt="phones">
+    </div>
+    <div class="second">
+
+      <div class="logo"><img src="images/brand.png" alt="brand-logo">
+      <span class="button"><img class="home"  src="images/home.png" alt="home">Log In</span></div>
+
+      
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+        life with
+        friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+        world.
+      </p>
+      <p> Oh yeah, did we mention it's free?</p>
+      <div class="badge"><img src="images/badge-iphone.png" alt="badge.iphone">
+        <img src="images/badge-android.png" alt="badge-android">
+      </div>
+
+    </div>
+  </div>
+  <footer class="third">
+    <a class="footer-link" href="#">About Us</a>
+    <a class="footer-link" href="#">Support</a>
+    <a class="footer-link" href="#">Blog</a>
+    <a class="footer-link" href="#">Press</a>
+    <a class="footer-link" href="#">Api</a>
+    <a class="footer-link" href="#">Jobs</a>
+    <a class="footer-link" href="#">Privacy</a>
+    <a class="footer-link" href="#">Terms</a>
+    <span class="copyright">&copy; 2014 Instagram</span>
+  </footer>
+
+</body>
+
 </html>
