--- a/index.html
+++ b/index.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href="./styles/style.css" rel="stylesheet" type="text/css">
+    
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main">
+      
+        <div class="outerwrapper">
+
+
+              <div id="iphone">
+                    <img src="./images/phones.png">
+
+
+              </div>
+
+
+              <div class="textcontentwrapper">
+                    <div class="brandline">
+                        <div class="logo"><img src="./images/brand.png" alt="instagram logo"></div>
+                        <div><img src="./images/home.png" alt="">Log in</div>
+                    </div>
+                    <div class="whitetextbox">
+                      <h3>Capture and Share the World's Moments</h3>
+                      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? </p>
+                      <div class="badgewrapper">
+                          <img src="./images/badge-android.png" alt="">
+                          <img src="./images/badge-iphone.png" alt="">
+                      </div>
+                    </div>
+
+
+              </div>
+
+
+
+        </div>
+
+
+
+    </div>
+   
   </body>
 </html>
