--- a/index.html
+++ b/index.html
@@ -4,13 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <div class="container">
+
+      <div class="left-side"> 
+        <img src="images/phones.png" alt="phones">
+      </div>
+
+
+      <div class="right-side">
+
+        <header>
+          <div>
+            <img class="logo" src="images/brand.png" alt="instagram logo">
+          </div>
+          <div>
+            <button class="log-in-button">
+                <img src="images/home.png" alt="home">
+                <h4>Log In</h4>
+            </button>
+          </div>
+        </header>
+
+        <div class="text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p> 
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="badge-images">
+          <div>
+            <img class="iphone-badge" src="images/badge-iphone.png" alt="iPhone badge">
+          </div>
+          <div>
+            <img src="images/badge-android.png" alt="Android badge">
+          </div>
+        </div>
+      </div>  
+    </div>
+
+
+
+
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li class="insta">&copy; 2014 INSTAGRAM</li>
+      </ul>
+      </footer> 
   </body>
 </html>
