--- a/index.html
+++ b/index.html
@@ -4,13 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <!-- left side -->
+    <div class="main__top">
+      
+        <img class="left--iphones" src="images/phones.png" alt="phones" />
+      
+      <!-- rigth side -->
+      <div class="right">
+        <div class="right__top">
+          <div class="right__top--img">
+            <img src="images/brand.png" alt="brand" />
+          </div>
+
+          <button class="right__top--loginButton">
+            <img src="images/home.png" alt="home" /> <b>Log in</b>
+          </button>
+        </div>
+        <div class="right__main">
+          <h2 class="right__main__heading">
+            Capture and Share <br />
+            the World's Moments
+          </h2>
+          <p>
+            Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share
+            your life <br />
+            with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look
+            <br />
+            and feel, then post to Instagram &mdash; it's that easy. You can
+            <br />
+            even share to Facebook, Twitter, Tumblr and more. It's a <br />
+            new way to see the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+
+          <div class="right__bottom">
+            <div><img src="images/badge-iphone.png" alt="" /></div>
+            <div class="right__bottom__playStore">
+              <img src="images/badge-android.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <ul class="footer__list">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <h6 class="footer__heading">&copy; 2014 Instagram</h6>
+    </footer>
   </body>
 </html>
