html pronto, css fazer

--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+     <!-- UPPER BLUE -->
+
+    <div class="blue">
+
+      <div class="phones"><img src="./images/phones.png" /></div>
+
+      <div class="logo"><img src="./images/brand.png" /></div>
+
+      <div class="login"><img src="./images/home.png" /> Log in</div>
+
+    </div>
+
+    <!-- WHITE MAIN -->
+
+    <div class="white">
+
+      <div class="text">
+        <h3>Capture and Share <br> the Worlds Moments</h3>
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+
+        <p>Take a pircture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+            You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+
+        <div>
+          <img src="./images/badge-iphone.png" />
+            
+          <img src="./images/badge-android.png" />
+        </div>
+      </div>
+    </div>
+
+    <!-- WHITE MAIN -->
+
+    <footer class="footer">
+      <div class="container">
+        <ul>
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+          <li id = "copyRight">&copy; 2014 Instagram</li>
+        </ul>
+      </div>
+    </footer>
+
   </body>
 </html>
