--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="main">
+  <section id="iphonepicbox">
+    <img src="./images/phones.png"/>
+  </section>  
+  <section id="infotext">  
+  <div id="header">
+    <img class="instalogo" src="./images/brand.png" alt="Instagram-Logo"/>
+    <button class="logInButton">
+        <img src="./images/home.png" alt="Home-Logo"/>
+        <p><b>Log in</b></p>
+    </button>
+  </div>
+
+  <div id="textbox">
+    <h2>Capture and Share <br> the World's Moments
+    </h2>
+    <article class="subtext">
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+      friends and family.</p>  
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </article> 
+    <article class="downloadButton">
+    <button><img src="./images/badge-iphone.png"> </button> 
+    <button><img src="./images/badge-android.png"></button> 
+  </article>
+  </div>
+
+</section>
+</div>
+
+  <footer>
+    <ul>
+      <li> <a href> About Us </a> 
+      <li> <a href>Support</a> 
+      <li> <a href>Blog</a>
+      <li> <a href>Press</a> 
+      <li> <a href>API</a>
+      <li> <a href>Jobs</a>
+      <li> <a href>Privacy</a> 
+      <li> <a href>Terms</a>
+    </ul>
+    <p class="copyrigth">&copy; 2014 Instagram</p>
+    
+  </footer>
+
   </body>
 </html>
