--- a/index.html
+++ b/index.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class='main'>
+      <div><img src="images/phones.png" class='iPhoneBox'></div>
+      <div class='descriptionBox'>
+        <div class='header'>
+          <div class='brand'><img src="images/brand.png"></div>
+          <button class='loginButton'>
+              <div class='home'><img src="images/home.png"></div>
+              <div class='loginLink'> <p>Login</p></div>
+          </button>
+        </div>
+        <div class='textBox'>
+            <img src="images/frame.png">
+            <h1>Capture and Share the World's Moments</h1>
+            <div class='text'>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+              friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            </div>
+        </div>
+        <div class='downloadButton'>
+          <div><img src='images/badge-iphone.png'>
+          </div>
+          <div><img src='images/badge-android.png'>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
+
