--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
 
   <body>
+    <!--Blue background-->
     <div class="blue-background"></div>
 
+    <!--Main section: all elements-->
     <section id="section">
       <!--Phone image-->
       <img id="phone-img" src="images/phones.png" />
@@ -38,9 +40,8 @@
             <img src="images/badge-android.png"/>
           </div>
         </div>
-        
-      </article>  
 
+      </article>  
     </section>
 
     <!--Links no final-->
