--- a/index.html
+++ b/index.html
@@ -1,17 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet"
+    href="C:\Users\51033877\Desktop\front basico\Ironhack\lab-css-instagram-clone\styles\style.css">
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <container>
+    <div class="blue">
+
+
+      <div class="phones"><img src="./images/phones.png" /></div>
+
+      <div><img src="./images/brand.png" /></div>
+
+
+      <div class="login"><img src="./images/home.png" /> Log in</div>
+
+    </div>
+
+    <div class="white">
+
+      <div class="text">
+        <h3>Capture and Share</h3>
+        <h3> the Worlds Moments</h3>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+          <p>Take a pircture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy.
+            You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+
+          <p>Oh yeah, did we mention it's free?</p>
+
+          <div>
+            <br>
+            <img src="./images/badge-android.png" />
+            
+            <img src="./images/badge-iphone.png" />
+          </div>
+      </div>
+
+
+
+
+
+    </div>
+
+
+
+
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="container">
+        <span>ABOUT&nbsp;&nbsp;US&nbsp;&nbsp;SUPPORT&nbsp;&nbsp;BLOG&nbsp;&nbsp;PRESS&nbsp;&nbsp;API&nbsp;&nbsp;JOBS&nbsp;&nbsp;PRIVACY&nbsp;&nbsp;TERMS</span>
+      </div>
+    </footer>
+
+
+
+    <container>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</body>
+
+
 </html>
