--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div class="phones"><img src="./images/phones.png" /></div>
 
-      <div><img src="./images/brand.png" /></div>
+      <div class="logo"><img src="./images/brand.png" /></div>
 
 
       <div class="login"><img src="./images/home.png" /> Log in</div>
@@ -29,19 +29,19 @@
       <div class="text">
         <h3>Capture and Share</h3>
         <h3> the Worlds Moments</h3>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
-          <p>Take a pircture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy.
-            You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+        <p>Take a pircture or video, choose a filter to transform its look and feel, then post to Instagram - it's that
+          easy.
+          You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
 
-          <p>Oh yeah, did we mention it's free?</p>
+        <p>Oh yeah, did we mention it's free?</p>
 
-          <div>
-            <br>
-            <img src="./images/badge-android.png" />
-            
-            <img src="./images/badge-iphone.png" />
-          </div>
+        <div>
+          <br>
+          <img src="./images/badge-iphone.png" />
+          <img src="./images/badge-android.png" />
+        </div>
       </div>
 
 
@@ -57,7 +57,17 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container">
-        <span>ABOUT&nbsp;&nbsp;US&nbsp;&nbsp;SUPPORT&nbsp;&nbsp;BLOG&nbsp;&nbsp;PRESS&nbsp;&nbsp;API&nbsp;&nbsp;JOBS&nbsp;&nbsp;PRIVACY&nbsp;&nbsp;TERMS</span>
+        <ul>
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+        </ul>
+
       </div>
     </footer>
 
