--- a/index.html
+++ b/index.html
@@ -3,14 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+     <section>
+         <div class="iphones">
+          <img src="images/phones.png" alt="iPhones picture">
+         </div>
+         
+         <div class="instagram-body">
+          <div class="login-logo">
+            <img src="images/brand.png" alt="Instagram logo">
+            <button><img src="images/home.png" alt="Login"> Log in
+            </button>
+          </div>
+         <div class="text">
+           <h1>Capture and Share <br>the World's Moments</h1>
+          <p>Instagram is a<strong> fast, beautiful</strong> and <strong>fun</strong> way to share your life
+            <br>with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram
+            - it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a 
+           <br> new way to see the world.</p>
+           <p>Oh yeah, did we mention it's free?</p>
+
+           <div class="buttons">
+            <a href="https://www.apple.com/shop"><img id="appstore" src="images/badge-iphone.png" alt=""></a>
+            <a href="https://play.google.com/store/"> <img src="images/badge-android.png" alt=""></a>
+
+          </div>
+         </div>
+
+          
+
+         </div>
+
+     </section>
+      <footer class="footer">
+        <ul>
+      <li><a href="#"></a>ABOUT US</li>
+      <li><a href="#"></a>SUPPORT</li>
+      <li><a href=#""></a>BLOG</li>
+      <li><a href="#"></a>PRESS</li>
+      <li><a href=#""></a>API</li>
+      <li><a href="#"></a>JOBS</li>
+      <li><a href="#"></a>PRIVACY</li>
+      <li><a href="#"></a>TERMS</li>
+      <li id="instagram"> &#169; 2021 Instagram</li>
+        </ul>
+      </footer>
+
+
   </body>
 </html>
