--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+<section>
+ <div id="phone-photo"> 
+  <img class="phone" src="./images/phones.png" alt="phone">
+ </div>
+
+
+ <div id="right-side">
+  <div id="logo-button">
+    <img src="./images/brand.png" alt="">
+    <button><img class="home" src="images/home.png" alt="">Log In</button>
+  </div>
+
+  <div id="description">
+    <h1>Capture and Share <br> the World's Moments</h1>
+    <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with
+      friends and family.</p>
+      <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+     
+    </div>
+   
+    <div id="iphone-android">
+      <img src="./images/badge-iphone.png" alt="">
+      <img class= "google" src="./images/badge-android.png" alt="">
+    </div>
+  </div>
+</section>
+
+<footer>
+
+  <ul>
+    <li><a href="aboutus">About Us</a></li>
+    <li><a href="Support">Support</a></li>
+    <li><a href="blog">Blog</a></li>
+    <li><a href="Press">Press</a></li>
+    <li><a href="API">API</a></li>
+    <li><a href="jobs">Jobs</a></li>
+    <li><a href="Privacy">Privacy</a></li>
+    <li><a href="Terms">Terms</a></li>
+    <li><a class="instagram" href="2014 Instagram">&copy; 2014 Instagram</a></li>
+  </ul>
+
+</footer>
+
   </body>
 </html>
