--- a/index.html
+++ b/index.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <header>
+    <div class="blue-background">
+      <img id="phones" src="images/phones.png" alt="Phones">
+
+      <img id="logoinsta" src="images/brand.png" alt="Instagram Logo">
+
+      <div class="button">
+
+        <a href="https://www.instagram.com/" target="_blank" ><button class="log-in"><img src="images/home.png"
+              alt="Home" width="35px"> Log in</a>
+
+              
+        </button>
+      </div>
+    </div>
+  </header>
+  
+<section class="text">
+  <div class="container-box">
+
+    <div class="text-container-box">
+      <h2>Capture and Share the World's Moments</h2>
+
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends
+        and family.</p>
+
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+
+      <p>Oh yeah, did we mention it's free?</p>
+
+      <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo" target="_blank"><img src="images/badge-iphone.png" /></a>
+      <a href="https://play.google.com/store/search?q=instagram" target="_blank"><img src="images/badge-android.png" /></a>
+
+      </div>
+</section>
+  <footer class="footer-links">
+
+    <ul>
+      <li><a href="https://about.instagram.com/" target="_blank">About Us</a></li>
+      <li><a href="https://help.instagram.com/" target="_blank">Support</a></li>
+      <li><a href="https://about.instagram.com/blog" target="_blank">Blog</a></li>
+      <li><a href="https://www.instagram.com/" target="_blank">Press</a></li>
+      <li><a href="https://developers.facebook.com/docs/instagram" target="_blank">API</a></li>
+      <li><a href="https://about.instagram.com/about-us/careers" target="_blank">Jobs</a></li>
+      <li><a href="https://help.instagram.com/519522125107875" target="_blank">Privacy</a></li>
+      <li><a href="https://help.instagram.com/581066165581870" target="_blank">Terms</a></li>
+      <li id="insta-copy">&copy; 2014 Instagram</li>
+      </div>
+
+    </ul>
+
+  </footer>
+</body>
+
 </html>
