added a padding to the Login Button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="brand">
           <img src="./images/brand.png">
-          <div class="log-in"><button><img src="./images/home.png">Log In</button></div>
+          <div class="log-in"><button><img src="./images/home.png"><span class="log-in-text">Log In</span></button></div>
         </div>
 
         <div class="content">
