--- a/index.html
+++ b/index.html
@@ -3,14 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+    <div class = 'telephones'>
+      <img src ="images/phones.png"  > 
+    </div>
+
+    <div class = 'logo'>
+        <img src="images/brand.png"  >
+    </div>
+
+    <div class='button'>
+        <img src="images/home.png" >
+       </div>
+
+
+      <div class = 'content'>
+      <h2>Capture and Share the World's Moments</h2> 
+      <p1>Instagram is a fast, beautiful and fun way to share your life with
+         friends and family.</p1> 
+      <p1>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. 
+      It's a new way to see the world.</p1>
+      <p1> Oh yeah, did we mention it's free? </p1>
+      <div class = 'badges'>
+        <img src ="images/badge-android.png">
+        <img src = "images/badge-iphone.png">
+        </div>
+      </div>
+
+      
+   </body>
+
+  <footer>
+     <a  style="text-decoration: none;">About us</a>
+    <a style="text-decoration: none;">Suport</a>
+    <a style="text-decoration: none;">Blog</a>
+    <a style="text-decoration: none;">Press</a>
+    <a style="text-decoration: none;">Api</a>
+    <a style="text-decoration: none;">Jobs</a>
+    <a style="text-decoration: none;">Privaci</a>
+    <a style="text-decoration: none;">Terms</a>
+</footer>
+
 </html>
