--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <div id="phone">
+        <img src="/images/phones.png" alt="Instagram on iPhone" />
+      </div>
+      
+      <div id="instagram">
+        <div id="instagram-top">
+          <img id="brand" src="/images/brand.png" alt="Instagram logo" />
+          <div id="log-in">
+            <img src="/images/home.png" alt="" />
+            <a href="#">Log in</a>
+          </div>
+        </div>
+        <div id="instagram-bottom">
+          <div id="instagram-bottom-text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+              friends and family.
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div id="instagram-bottom-downloads">
+            <img src="/images/badge-iphone.png" alt="iPhone badge">
+            <img src="/images/badge-android.png" alt="Android badge">
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+
   </body>
 </html>
