Versão 02 - Quase, mas inacabada :)

--- a/index copy.html
+++ b/index copy.html
@@ -22,7 +22,7 @@
           <!--CAIXINHA 02 - TEXTOS E LOGOS------>
           <article class="container" >
             <!-- <img id="whiteframe" alt="whiteframe" src=images/frame.png /> -->
-            
+            <div id="soTextos">
               <h1>Capture and Share<br>
               the World's Moments</h1>
               <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br>
@@ -32,7 +32,7 @@
               even share to Facebook, Twitter, Tumblr and more. It's a<br>
               new way to see the world.</p>
               <p>Oh yeah, did we mention it's free?</p>
-            
+            </div>
             <div id="appStores">
               <img src="./images/badge-iphone.png" alt="Apple Store logo">
               <img src="./images/badge-android.png" alt="Google Store logo">
